<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@drawable/home_background"
    tools:context="com.example.android.daslebenindeutschlandaufarabisch.HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeWelcomeMessage"
        android:textSize="33sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/testSelection"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/border_orange"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="getMainTest"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTestTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/mainTest"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        </LinearLayout>


            <ImageView
                android:layout_width="96dp"
                android:layout_height="128dp"
                android:layout_weight="0"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/question_mark"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="getImagesTest"
        android:background="@drawable/border_black"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagesTestTitle"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/imagesTest"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="17sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="90dp"
            android:layout_height="128dp"
            android:layout_weight="0"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/eagle"/>

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4358846727124158/6397112922">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
