<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.android.daslebenindeutschlandaufarabisch.ImagesTestActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:padding="4dp"
            android:onClick="closeApp"
            android:src="@drawable/close"/>

        <TextView
            android:id="@+id/images_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Score: 0" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/images_score"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="newGame"
            android:src="@drawable/repeat"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/home_button"
            android:layout_marginRight="4dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="goHome"
            app:srcCompat="@drawable/ic_action_name" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/image_view"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/images_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:textAlignment="textStart"
        android:text="@string/questionTxtView" />

    <TextView
        android:id="@+id/images_questionAr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:background="@android:color/white"
        android:gravity="right"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:text="@string/questionTxtView" />

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:background="#1a1a1a"
        android:id="@+id/images_answer1"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:text="@string/Choice1TxtView" />

    <CheckedTextView
        android:id="@+id/images_answer2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/Choice2TxtView" />

    <CheckedTextView
        android:id="@+id/images_answer3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/Choice3TxtView" />

    <CheckedTextView
        android:id="@+id/images_answer4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/Choice4TxtView" />

</LinearLayout>


</LinearLayout>
